--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+@keyframes anime {
+  0%{
+      transform: translateY(0deg);
+  }
+  100%{
+      transform: translateY(100deg);
+  }
+}
